--- a/Venetian/MainWindow.xaml
+++ b/Venetian/MainWindow.xaml
@@ -5,10 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Venetian"
         mc:Ignorable="d"
-        Title="Venetian" Height="350" Width="525">
-    <Grid>
+        Title="Venetian" Height="350" Width="434.677">
+    <Grid Margin="0,0,2,0">
 
-        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="269" Margin="10,40,0,0" VerticalAlignment="Top" Width="497">
+        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="269" Margin="10,40,0,0" VerticalAlignment="Top" Width="405">
             <TabItem Header="Inloggen">
                 <Grid Background="#FFE5E5E5">
                     <Label x:Name="label2" Content="Gebruikersnaam:" HorizontalAlignment="Left" Margin="20,46,0,0" VerticalAlignment="Top"/>
