--- a/Venetian/MainWindow.xaml
+++ b/Venetian/MainWindow.xaml
@@ -5,33 +5,44 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Venetian"
         mc:Ignorable="d"
-        Title="Venetian" Height="350" Width="434.677">
+        Title="Venetian" Height="354.348" Width="442.286" Icon="boy_in_the_middle.ico">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+            <GradientStop Color="#FFEF4DB8" Offset="1"/>
+            <GradientStop Color="#FFC844F8"/>
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid Margin="0,0,2,0">
 
         <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="269" Margin="10,40,0,0" VerticalAlignment="Top" Width="405">
             <TabItem Header="Inloggen">
-                <Grid Background="#FFE5E5E5">
+                <Grid Background="Lavender">
                     <Label x:Name="label2" Content="Gebruikersnaam:" HorizontalAlignment="Left" Margin="20,46,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="label2_Copy" Content="Wachtwoord:" HorizontalAlignment="Left" Margin="20,77,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="label2_Copy1" Content="" HorizontalAlignment="Left" Margin="20,108,0,0" VerticalAlignment="Top"/>
+
                     <TextBox x:Name="textboxLoginUsername" HorizontalAlignment="Left" Height="23" Margin="179,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="192"/>
                     <PasswordBox x:Name="passwordBoxLogin" HorizontalAlignment="Left" Height="23" Margin="179,80,0,0" VerticalAlignment="Top" Width="192"/>
-                    <Button x:Name="buttonLogin" Content="Login" HorizontalAlignment="Left" Margin="296,194,0,0" VerticalAlignment="Top" Width="75" Click="buttonLogin_Click"/>
+                    <Button x:Name="buttonLogin" Content="Login" IsDefault="True" HorizontalAlignment="Left" Margin="296,194,0,0" VerticalAlignment="Top" Width="75" Click="buttonLogin_Click"/>
+                    <Image Source="Boy_in_the_middle.ico" Margin="15,139,293,3"/>
+                    <Label Margin="113,167,123,28" FontSize="30" FontFamily="Trajan Pro" Content="Venetian"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Registeren">
-                <Grid Background="#FFE5E5E5">
+                <Grid Background="Lavender">
                     <Label x:Name="label" Content="Gebruikersnaam:" HorizontalAlignment="Left" Margin="20,46,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="label_Copy" Content="Wachtwoord:" HorizontalAlignment="Left" Margin="20,77,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="label_Copy1" Content="Herhaal wachtwoord:" HorizontalAlignment="Left" Margin="20,108,0,0" VerticalAlignment="Top"/>
                     <TextBox x:Name="textboxUsername" HorizontalAlignment="Left" Height="23" Margin="179,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="192"/>
                     <PasswordBox x:Name="passwordBox" HorizontalAlignment="Left" Height="23" Margin="179,80,0,0" VerticalAlignment="Top" Width="192"/>
                     <PasswordBox x:Name="passwordBoxRepeat" HorizontalAlignment="Left" Height="23" Margin="179,111,0,0" VerticalAlignment="Top" Width="192"/>
-                    <Button x:Name="buttonRegister" Content="Registreer" HorizontalAlignment="Left" Margin="296,194,0,0" VerticalAlignment="Top" Width="75" Click="buttonRegister_Click"/>
+                    <Button x:Name="buttonRegister" Content="Registreer" IsDefault="True" HorizontalAlignment="Left" Margin="296,194,0,0" VerticalAlignment="Top" Width="75" Click="buttonRegister_Click"/>
+                    <Image Source="Boy_in_the_middle.ico" Margin="15,139,293,3"/>
+                    <Label Margin="113,166,123,29" FontSize="30" FontFamily="Trajan Pro">Venetian</Label>
                 </Grid>
             </TabItem>
         </TabControl>
-        <Menu x:Name="menu" HorizontalAlignment="Left" Height="24" VerticalAlignment="Top" Width="517">
+        <Menu x:Name="menu" HorizontalAlignment="Left" Height="24" VerticalAlignment="Top" Width="800" Background="Lavender">
             <MenuItem Name="bestand" Header="_Bestand">
                 <MenuItem Name="MenuItemBestand" Header="_Sluiten"/>
             </MenuItem>
