--- a/Venetian/MessagePanel.xaml
+++ b/Venetian/MessagePanel.xaml
@@ -6,7 +6,19 @@
         xmlns:local="clr-namespace:Venetian"
         mc:Ignorable="d"
         Title="Venetian" Height="551.219" Width="786.99">
-    <Grid Background="LightSteelBlue" Margin="0,0,0,-5">
+    <Window.Background>
+        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="#FFEF4DB8" Offset="0"/>
+            <GradientStop Color="#FFC844F8" Offset="1"/>
+        </LinearGradientBrush>
+    </Window.Background>
+    <Grid Margin="0,0,0,-5">
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FFEF4DB8" Offset="1"/>
+                <GradientStop Color="#FFC844F8"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <Menu x:Name="menu" HorizontalAlignment="Left" Height="24" VerticalAlignment="Top" Width="779" >
             <MenuItem Name="bestand" Header="_Bestand">
                 <MenuItem Name="Afmelden" Header="_Afmelden"/>
