--- a/Venetian/MainWindow.xaml
+++ b/Venetian/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Venetian"
         mc:Ignorable="d"
-        Title="Venetian" Height="354.348" Width="442.286" Icon="boy_in_the_middle.ico">
+        Title="Venetian" Height="354.348" Width="442.286" Icon="boy_in_the_middle.ico" ResizeMode="NoResize">
     <Window.Background>
         <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
             <GradientStop Color="#FFEF4DB8" Offset="1"/>
@@ -14,8 +14,8 @@
     </Window.Background>
     <Grid Margin="0,0,2,0">
 
-        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="269" Margin="10,40,0,0" VerticalAlignment="Top" Width="405">
-            <TabItem Header="Login">
+        <TabControl x:Name="tabControl" HorizontalAlignment="Left" Height="269" Margin="10,40,0,0" VerticalAlignment="Top" Width="405" SelectionChanged="tabControl_SelectionChanged">
+            <TabItem Header="Login" HorizontalAlignment="Right" Width="45">
                 <Grid Background="Lavender">
                     <Label x:Name="label2" Content="Username:" HorizontalAlignment="Left" Margin="20,46,0,0" VerticalAlignment="Top"/>
                     <Label x:Name="label2_Copy" Content="Password:" HorizontalAlignment="Left" Margin="20,77,0,0" VerticalAlignment="Top"/>
