--- a/Venetian/MessagePanel.xaml
+++ b/Venetian/MessagePanel.xaml
@@ -32,7 +32,8 @@
                     <Border BorderThickness="2" BorderBrush="Black" Margin="10,31,577,16">
                         <ListBox x:Name="listBoxReceivers" Background="White" SelectionChanged="listBoxReceivers_SelectionChanged"/>
                     </Border>
-                    <Label x:Name="label" Content="Contacts" FontFamily="./Resources/#Trajan Pro" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Width="84" FontWeight="Bold"/>
+                    <Label x:Name="contactsLabel" Content="Contacts" FontFamily="./Resources/#Trajan Pro" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Width="84" FontWeight="Bold"/>
+                    <Label x:Name="receiverLabel" Content="XXX" FontFamily="./Resources/#Trajan Pro" HorizontalAlignment="Left" Margin="180,5,0,0" VerticalAlignment="Top" Width="448" FontWeight="Bold"/>
                     <Border BorderThickness="2" BorderBrush="Black" Margin="181,31,10,92">
                         <ScrollViewer Name="scrollviewerConversation">
                             <TextBlock Background="White" x:Name="textBlockMessages" TextWrapping="Wrap" ScrollViewer.VerticalScrollBarVisibility="Auto" Padding="10"/>
